# widip

./: .boot  .gitignore  Makefile  Pipfile  README.md  __main__.py  _yaml_parser  a.txt  actors.yaml  beat  categories.py  check_debug.py  check_ty.py  composing.py  crack  debug.txt  debug_compile_xargs.py  debug_crash.py  debug_fizzbuzz_syntax.py  debug_load.py  debug_mapping.py  debug_out.txt  debug_parse.py  debug_tensor.py  debug_types.py  debug_yaml.py  debug_yaml_loader.py  diag.py  error.txt  feedback.py  files.py  fold  implementation_plan.md  inet.ipynb  lex.yy.c  lisp.py  loader.py  main.py  main.yaml  nx_yaml.py  (+53 more)
.agent/: yaml_parser_complete_report.md  yaml_parser_final_report.md  yaml_parser_progress.md  yaml_parser_session_summary.md
computer/: __init__.py  asyncio.py  common.py  composition.py  core.py  drawing.py  exec.py  hyper.py  hyper_extended.py  io.py  python.py  super_extended.py
etc/: env.yaml
examples/: 1234.yaml  README.md  actors.yaml  countdown.py  countdown.yaml  crack-then-beat.yaml  crack-then-mix.yaml  hello-world-map.yaml  hello-world.yaml  maybe.yaml  react.yaml  shell.yaml  simple_recursion.yaml  sweet-expressions.yaml  test_script.sh
lib/: yaml.yaml
playground/: index.html  server.py
src/: README.md  __init__.py  data.yaml  test_control.py
tests/: README.md  chained-fan-out.test.yaml  countdown.test.yaml  fan-out.test.yaml  fizzbuzz.test.yaml  git-first-commit.test.yaml  infinite-counter.test.yaml  quad-branch.test.yaml  test_anchors.py  test_compilation.py  test_compiler.py  test_complex_expr.test.yaml  test_complex_mapping.test.yaml  test_expr.test.yaml  test_guard.test.yaml  test_guard_fail.test.yaml  test_guard_stdin.test.yaml  test_harness.py  test_interactive.py  test_join.test.yaml  test_join_sed.test.yaml  test_key_only.test.yaml  test_lang.py  test_loader.py  test_logic.py  test_metaprog.py  test_migration.py  test_parser_repro.py  test_paste.test.yaml  test_paste_args.test.yaml  (+12 more)
(+298 files in other folders)
