[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["titi"]

[project]
name = "titi"
version = "0.1.0"
description = "Titi is an interactive environment for computing with wiring diagrams in modern systems"
dependencies = [
  "discopy>=1.2.2", "watchfiles>=1.1.1", "nx-yaml>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]

