[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["titi", "bin", "lib"]

[tool.hatch.build.targets.wheel.force-include]
"lib/computer/yaml_parser" = "lib/computer/yaml_parser"

[project]
name = "titi"
version = "0.1.0"
description = "Titi is an interactive environment for computing with wiring diagrams in modern systems"
dependencies = [
  "discopy>=1.2.2", "watchfiles>=1.1.1", "nx-yaml>=1.0.0",
]

[project.scripts]
titi = "titi.__main__:main"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]

